src/Components/App.css
/* =================================
  Element Styles
==================================== */

* {
  box-sizing: border-box;
}

body {
  font: 1em/1.5 'Roboto', sans-serif;
  color: #4c4c4c;
  background: #FF9800;
  padding-top: 145px;
  padding-bottom: 3em;
  margin: 0;
}

a {
  text-decoration: none;
}

ul,
li {
  margin: 40px 0 0 0;
  padding: 0;
  list-style: none;
}

input {
  font-size: 1.12em;
  height: 46px;
  padding: 1em;
  background: #eee;
  border: none;
  outline: 0;
  border-bottom: 4px solid #e4e4e4;
  transition: border-color .4s;
}

input:focus {
  border-color: #c1c1c1;
}

button {
  width: 40px;
  height: 35px;
  border: 0;
  background: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  z-index: 2000;
}

/* =================================
  Page Components
==================================== */

.main-title {
  font-size: 3rem;
  color: #fff;
  text-shadow: 2px 2px gray;
  line-height: 80px;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin: 20px 0 0;
}

.search-form input:only-of-type {
  width: 100%;
  margin-right: -40px;
  padding-right: 35px;
  margin-bottom: 10px;
}

.search-button {
  float: right;
  margin: 5px 0px;
}

.icn-search {
  font-weight: 700;
}

.icon-gif {
  font-size: 6em;
  margin-bottom: 0;
  color: red;
  display: block;
}

.no-gifs  {
  color: red;
  height: 140px;
  padding-top: 62px;
  text-align: center;
  font-size: 1.25em;
}

.gif-list a {
  display: block;
  margin: auto;
}

.gif-wrap {
  background-color: #fff;
  margin-bottom: .8em;
  position: relative;
}

.gif-wrap img {
  width: 100%;
}

/* =================================
  Layout Styles
==================================== */

.inner,
.main-content {
  width: 90%;
  max-width: 1025px;
  margin: auto;
}

.main-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: #8bc34a; /* Light Green */
  min-height: 80px;
  z-index: 1000;
}

.main-content::after {
  content: " ";
  display: table;
  clear: both;
}

.is-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}



/* =================================
The switch - the box around the slider
==================================== */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

#switchArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-transform: uppercase;
  font-family: 'Poppins', sans-serif;
  font-size: .9rem;
  height: 3.3rem;
  margin-right: 15px;
}

.autoWord {
  margin: 0 5px 0 0;
}

/* =================================
  Media Queries
==================================== */

@media (min-width: 0) and (max-width: 549px) {
  .gif-list li {
    text-align: center;
    margin: 20px 0 0;
    font-size: 0;
  }
  ul {
    margin: 80px 0 0 0;
  }
  .main-title {
    text-align: center;
  }
}

@media (min-width: 550px) {
  .gif-list li {
    float: left;
    width: 50%;
    margin: 0;
  }
  .gif-wrap img {
    height: 235px;
  }
  .gif-list .no-gifs {
    float: none;
    width: 100%;
  }
  .gif-wrap {
    border: 1px solid white;
    padding: 0;
    overflow: hidden;
    font-size: 0;
  }
  ul {
    margin: 100px 0 0 0;
  }
  .main-title {
    text-align: center;
  }
}

@media (min-width: 769px) {
  body {
    padding-top: 115px;
  }
  .main-title {
    float: left;
  }
  .search-form {
    width: 30vw;
    float: right;
    margin: 34px 30px;
    display: flex;
  }
  .gif-list li {
    width: 33.333333333%;
  }
}

@media (min-width: 769px) {
  .gif-list li:nth-of-type(3n+1) {
    clear: left;
  }
}

